--- a/package.json
+++ b/package.json
@@ -2,6 +2,45 @@
   "name": "pm-dashboard",
   "version": "0.1.0",
   "private": true,
+  "main": "electron/main.js",
+  "author": "Lullabot",
+  "homepage": "./",
+  "build": {
+    "appId": "com.lullabot.pm-dashboard",
+    "productName": "PM Dashboard",
+    "asar": false,
+    "extraMetadata": {
+      "main": "electron/main.js"
+    },
+    "files": [
+      "build/**/*",
+      "electron/**/*",
+      "server.js",
+      "package.json",
+      "!node_modules/@testing-library/**",
+      "!node_modules/@types/**",
+      "node_modules/**/*"
+    ],
+    "mac": {
+      "category": "public.app-category.business",
+      "target": [
+        "dmg",
+        "zip"
+      ]
+    },
+    "win": {
+      "target": [
+        "nsis",
+        "portable"
+      ]
+    },
+    "linux": {
+      "target": [
+        "AppImage",
+        "deb"
+      ]
+    }
+  },
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -18,12 +57,23 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "electron": "^32.0.0",
+    "electron-builder": "^25.1.8"
+  },
   "scripts": {
     "start": "react-scripts start",
     "server": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron": "electron .",
+    "electron-dev": "ELECTRON_IS_DEV=1 NODE_ENV=development electron .",
+    "electron-build": "npm run build && electron .",
+    "dist": "npm run build && electron-builder",
+    "dist-mac": "npm run build && electron-builder --mac",
+    "dist-win": "npm run build && electron-builder --win",
+    "dist-linux": "npm run build && electron-builder --linux"
   },
   "eslintConfig": {
     "extends": [
