--- a/package.json
+++ b/package.json
@@ -19,8 +19,14 @@
       "package.json",
       "!node_modules/@testing-library/**",
       "!node_modules/@types/**",
+      "node_modules/call-bind-apply-helpers/**/*",
+      "node_modules/call-bound/**/*",
+      "node_modules/side-channel-map/**/*",
       "node_modules/**/*"
     ],
+    "afterPack": "electron-builder-after-pack.js",
+    "npmRebuild": false,
+    "nodeGypRebuild": false,
     "mac": {
       "category": "public.app-category.business",
       "icon": "build/icons/icon.icns",
@@ -50,6 +56,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
     "@testing-library/user-event": "^13.5.0",
+    "call-bind-apply-helpers": "^1.0.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
@@ -74,10 +81,10 @@
     "electron": "electron .",
     "electron-dev": "ELECTRON_IS_DEV=1 NODE_ENV=development electron .",
     "electron-build": "npm run build && electron .",
-    "dist": "npm run build && electron-builder",
-    "dist-mac": "npm run build && electron-builder --mac",
-    "dist-win": "npm run build && electron-builder --win",
-    "dist-linux": "npm run build && electron-builder --linux",
+    "dist": "npm run build && npm install --production=false && electron-builder",
+    "dist-mac": "npm run build && npm install --production=false && electron-builder --mac",
+    "dist-win": "npm run build && npm install --production=false && electron-builder --win",
+    "dist-linux": "npm run build && npm install --production=false && electron-builder --linux",
     "icon:convert": "node convert-icon.js",
     "icon:generate": "npm run icon:convert && npx electron-icon-builder --input=./icon.png --output=./build --flatten"
   },
