--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@neutralinojs/neu": "^11.6.0",
     "@resvg/resvg-js": "^2.6.2",
     "electron": "^32.0.0",
     "electron-builder": "^25.1.8",
@@ -86,7 +87,12 @@
     "dist-win": "npm run build && npm install --production=false && electron-builder --win",
     "dist-linux": "npm run build && npm install --production=false && electron-builder --linux",
     "icon:convert": "node convert-icon.js",
-    "icon:generate": "npm run icon:convert && npx electron-icon-builder --input=./icon.png --output=./build --flatten"
+    "icon:generate": "npm run icon:convert && npx electron-icon-builder --input=./icon.png --output=./build --flatten",
+    "neutralino:update": "npx @neutralinojs/neu update",
+    "neutralino:get-binaries": "./get-neutralino-binaries.sh",
+    "neutralino:dev": "node neutralino-main.js & npx @neutralinojs/neu run",
+    "neutralino:build": "npm run build && cp neutralino.js build/ && rm -rf resources && cp -r build resources && npx @neutralinojs/neu build",
+    "neutralino:installer": "npm run neutralino:build && ./create-macos-installer.sh"
   },
   "eslintConfig": {
     "extends": [
