--- a/neutralino.config.json
+++ b/neutralino.config.json
@@ -17,7 +17,8 @@
     "app.*",
     "os.*",
     "filesystem.*",
-    "extensions.*"
+    "extensions.*",
+    "window.*"
   ],
   "modes": {
     "window": {
