Allow copy paste to work

--- a/neutralino.config.json
+++ b/neutralino.config.json
@@ -18,7 +18,8 @@
     "os.*",
     "filesystem.*",
     "extensions.*",
-    "window.*"
+    "window.*",
+    "clipboard.*"
   ],
   "modes": {
     "window": {
